2003-09-29  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Connect to the error callback.

2003-09-29  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.[ch]:
	Add an error signal for reporting errors.

2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/sj-extracting.c: (on_extract_activate):
	Fix crash when closing progress dialog (using esc or WM close button).

2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/sj-extracting.c: (on_progress_cancel_clicked),
	(on_extract_activate):
	Fix crash when ripping after cancelling.
	Set progress bar to 0 before showing progress dialog.

2003-09-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/cd-drive.c: (linux_scan):
	Fix devfs detection.

2003-09-25  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Add a very basic error handler for now.

2003-09-25  Ross Burton  <ross@burtonini.com>

	* src/bacon-cd-selection.[ch]:
	* src/cd-drive.c:
	* src/dvd_plus_rw_utils.cpp:
	Updated libbacon sources.

2003-09-24  Bastien Nocera  <hadess@hadess.net>

	* src/sj-extractor.c: (sj_extractor_supports_encoding):
	* src/sj-extractor.h:
	* src/sj-main.c: (main): check for the cdparanoia plugin being present
	(Closes: #123122)

2003-09-24  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/Makefile.am:
	Fix parallel build.

2003-09-24  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* Makefile.am:
	Remove intltool generated tools on distclean, not clean.

2003-09-16  Bastien Nocera  <hadess@hadess.net>

	* tests/mb-test.c: (metadata_cb), (main):
	Fix the test so that it works and compiles.

2003-09-16  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Fix a very stupid crash when not online, thanks to Frederic Crozat
	<fcrozat@mandrakesoft.com> for noticing.

	* NEWS:
	* configure.in:
	New release.

2003-09-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Bump version number.

	* src/Makefile.am:
	Dist the marshal list.

	* tests/Makefile.am: