@@ -1,5 +1,10 @@
 2003-09-29  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-metadata-musicbrainz.c:
+	Correctly handle the artist in compilation CDs.
+
+2003-09-29  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extracting.c:
 	Connect to the error callback.
 
